<resources>
    <string name="app_name">MobirollerTask</string>
    <string name="products">Products</string>
    <string name="product_add">Product Add</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="product_title">Product Title</string>
    <string name="category">Category</string>
    <string name="add_product">Add Product</string>
    <string name="product_detail">Product Detail</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="sort_products">Sort products</string>
    <string name="please_select_image">Please Select Image</string>
    <string name="currency">%1$sTL</string>

    <string-array name="sortingOptions">
        <item>Sort by date</item>
        <item>Sort by price</item>
    </string-array>
</resources>